--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -14,7 +14,7 @@ Darbo tikslas -- pasiūlyti metodiką ir sukurti įrankį kenksmingų ir nekenks
 
 Sprendžiami uždaviniai:
 \begin{enumerate}
-    \item sąvybių vektoriaus formavimo ir klasifikavimo modelių parinkimas;
+    \item savybių vektoriaus formavimo ir klasifikavimo modelių parinkimas;
     \item kenksmingų interneto tinklalapių identifikavimo modelio sukūrimas;
     \item kenksmingų interneto tinklalapių identifikavimo modelio programinė realizacija;
     \item kenksmingų interneto tinklalapių identifikavimo modelio pritaikymas analizuojant realų duomenų rinkinį.
