--- a/docs/apzvalga/webtrees_process.tex
+++ b/docs/apzvalga/webtrees_process.tex
@@ -3,7 +3,7 @@
 
 \begin{tikzpicture}[node distance = 1.5 cm, auto]
     \node [block] (url) {URL adresai};
-    \node [block, below of=url] (features) {Leksikografinės bei serverio sąvybės};
+    \node [block, below of=url] (features) {Leksikografinės bei serverio savybės};
     \node [block, below of=features] (tree) {Klasifikatorius};
     \node [block, below of=tree] (result) {Kenksmingos ir nekenksmingos svetainės};
 
