--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -108,9 +108,9 @@ praktiniam panaudojimui, kritiškai įvertinamas praktinis įrankio panaudojimas
 
 \begin{enumerate}[label=\arabic*.]
 \item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlytas PageRank įverčio naudojimas kenksmingų interneto tinklalapių identifikavimo modelyje;
-\item Suformuotas modelis kurio tikslumas 97.5 \%;
-\item Sukurta kenksmingų interneto tinklalapių identifikavimo programa kuri gali būti lengvai modifikuojama, tiksliai identifikuoja kenksmingus tinklalapius, pagal validavimo imtį, tačiau klaidingai identifikuoja tam tikrus tinklalapius;
-\item ateityje siūloma tobulinti programą į klasifikuojamų objektų požymius įtraukiant tinklalapių turinį bei serverių informaciją atspindinčius parametrus.
+\item Suformuotas modelis, kurio tikslumas 97,5 \%;
+\item Sukurta kenksmingų interneto tinklalapių identifikavimo programa, kuri gali būti lengvai modifikuojama, tiksliai identifikuoja kenksmingus tinklalapius, pagal validavimo imtį;
+\item Ateityje siūloma tobulinti programą į klasifikuojamų tinklalapių požymius įtraukiant tinklalapių turinį bei serverių informaciją apibūdinančius parametrus.
 \end{enumerate}
 
 \newpage
