--- a/docs/taikymas/bandymas.tex
+++ b/docs/taikymas/bandymas.tex
@@ -16,6 +16,6 @@ tinklalapių pateikiama lentelėje \vref{tab:bandymas}.
 \end{ktutable}
 
 Toks kenksmingų interneto tinklalapių identifikavimo programos bandymas parodo trūkumų. Tam tikri tinklalapiai kaip Google, 15min kurie nėra kenksmingi,
-yra klasifikuojami netiesingai. Tačiau validavimo imties klasifikavimo kokybės metrikos rodo gerus rezultatus - \textbf{tikslumas 0.976, specifiškumas 0.982, jautrumas 0.932}.
+yra klasifikuojami klaidingai. Tačiau validavimo imties klasifikavimo kokybės metrikos rodo gerus rezultatus - \textbf{tikslumas 0.976, specifiškumas 0.982, jautrumas 0.932}.
 
-Programos trūkumas yra tai, kad iš tiesinės regresijos modelio negalima paprastai gauti priežasčių, dėl ko tinklalapis buvo klasifikuotas kaip kenksmingas ar nekenksmingas. Tačiau kenksmingų interneto tinklalapių identifikaivmo programa turi ir privalumų. Kenksmingų tinklalapių klasifikavimas vykdomas pagal mokymo duomenų rinkinį, tai leidžia pakeitus kenksmingų tinklalapių sąrašą identifikuoti kitos klasės tinklalapius, pavyzdžiui pagal jų tematiką. Taip pat sistemos veikimas yra aiškus - komercinės sistemos nepateikia tikslaus klasifikavimo metodo. Šią programą galima lengvai modifikuoti, ar keičiant sistemos sąsają ar klasifikavimo modelį. Taikant programą praktikoje būtina atsižvelgti į šiuos trūkumus bei privalumus.
+Programos trūkumas yra tai, kad iš logistinės regresijos modelio negalima paprastai gauti priežasčių, dėl ko tinklalapis buvo klasifikuotas kaip kenksmingas ar nekenksmingas. Tačiau kenksmingų interneto tinklalapių identifikaivmo programa turi ir privalumų. Kenksmingų tinklalapių klasifikavimas vykdomas pagal mokymo duomenų rinkinį, tai leidžia pakeitus kenksmingų tinklalapių sąrašą identifikuoti kitos klasės tinklalapius, pavyzdžiui pagal jų tematiką. Taip pat sistemos veikimas yra aiškus - komercinės sistemos nepateikia tikslaus klasifikavimo metodo. Šią programą galima lengvai modifikuoti, ar keičiant sistemos sąsają ar klasifikavimo modelį. Taikant programą praktikoje būtina atsižvelgti į šiuos trūkumus bei privalumus.
