--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -19,7 +19,7 @@ Kenksmingų interneto tinklalapių identifikavimo programa pritaikyta naudoti ht
 lentelėje. Tinklalpio kurį norima klasifikuoti adresas yra pateikiamas klasifikavimo programai, grąžinamas
 rezultatas yra klasifikavimo modelio pateiktas įvertis.
 
-Kenksmingų interneto tinklalapių identifikavimo programos architektūra pateikiama paveiksle \ktufigref{images/architektura.png}
+Kenksmingų interneto tinklalapių identifikavimo programos architektūra pateikiama \ktufigref{images/architektura.png}
 
 \ktufigure{images/architektura.png}{12 cm}{Kenksmingų interneto tinklalapių identifikavimo programos architektūra}
 
