--- a/docs/apzvalga/taxonomy.tex
+++ b/docs/apzvalga/taxonomy.tex
@@ -1,4 +1,4 @@
-Straipsnyje \kclong{tax} analizuojami įvairūs metodai kuriais pasinaudojant apgaunami naudotojai, jie patenka į kenksmingus tinklalapius. Atakose naudotojas yra išskiriamas kaip silpniausia sistemos grandis \cite{tax}. Tai išskiriama ne tik dėl galimybės apgauti pateikiant klaidinančią informaciją, bet ir dėl naudotojų turimų teisių, naudotojas gali prieiti prie visų sistemos resursų ir įdiegti bet kokią programinę įrangą, net jei ji yra kenksminga. Be vartotojo pagalbos tą padaryti itin sunku. Sistemos naudotoju stengiamasi pasinaudoti semantinėse atakose.
+Straipsnyje \kclong{tax} analizuojami įvairūs metodai kuriais pasinaudojant apgaunami naudotojai, jie patenka į kenksmingus tinklalapius. Atakose naudotojas yra išskiriamas kaip silpniausia sistemos grandis \cite{tax}. Tai išskiriama ne tik dėl galimybės apgauti pateikiant klaidinančią informaciją, bet ir dėl naudotojų turimų teisių, naudotojas gali prieiti prie visų sistemos resursų ir įdiegti bet kokią programinę įrangą, net jei ji yra kenksminga. Be naudotojo pagalbos tą padaryti itin sunku. Sistemos naudotoju stengiamasi pasinaudoti semantinėse atakose.
 
 Straipsnyje išskiriamos semantinės atakos yra \cite{tax}:
 \begin{enumerate}
@@ -11,6 +11,6 @@ Straipsnyje išskiriamos semantinės atakos yra \cite{tax}:
     \item \textbf{Removable Media} -- Fiziniais įrenginiais paremtos atakos.
     \item \textbf{Wireless} -- belaidžiais įrenginiais paremtos atakos.
 \end{enumerate}
-Didelė dalis šių atakų (\ref{phishing}, \ref{popup}, \ref{malvertisement}, \ref{socnet}) naudojasi tarpinėmis svetainėmis. Tai yra ramstinės svetainės per kurias yra nukreipiamas duomenų srautas ir paskirstomas į kitas kenksmingas svetaines kurios yra naudojamos galutinei naudotojų monetizacijai \cite{linchpins}. Šios atakos pasižymi tuo, kad naudotojai jas gali atskirti per URL adresą, kuris nuves į kenkėjišką svetainę \cite{tax}.
+Didelė dalis šių atakų (\ref{phishing}, \ref{popup}, \ref{malvertisement}, \ref{socnet}) naudojasi tarpinėmis svetainėmis. Tai yra ramstinės svetainės per kurias yra nukreipiamas duomenų srautas ir paskirstomas į kitas kenksmingas svetaines, kurios yra naudojamos galutinei naudotojų monetizacijai \cite{linchpins}. Šios atakos pasižymi tuo, kad naudotojai jas gali atskirti per URL adresą, kuris nuves į kenkėjišką svetainę \cite{tax}.
 
 Semantines atakas atpažinti siūlomi mašininio mokymosi modeliai \cite{tax}. Jie gali būti pritaikyti atpažinti atakas pagal įvairias savybes: el. laiškų turinį, svetainių URL adresus, tinklalapių turinį \cite{tax}.
