--- a/docs/apzvalga/webcop.tex
+++ b/docs/apzvalga/webcop.tex
@@ -2,15 +2,15 @@ Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} metodas skirtas atpažinti ža
 
 Šiuo straipnsiu siekiama \cite{webcop}:
     \begin{itemize}
-        \item pateikti sistemą gebančią atpažinti kenksmingas bei saugias interneto kaimynystes kurias sudaro svetainių nuorodos
-         \item pateikti tikslingą, iš apačios aukštyn, veikiantį kenkėjiškos programinės įrangos aptikimo metodą
-         \item papildomą būdą atpažinti pirmojo tipo klaidas kenkėjiškos programinės įrangos identifikavimo modulyje
+        \item pateikti sistemą gebančią atpažinti kenksmingas bei saugias interneto kaimynystes kurias sudaro svetainių nuorodos,
+         \item pateikti tikslingą, iš apačios aukštyn, veikiantį kenkėjiškos programinės įrangos aptikimo metodą,
+         \item papildomą būdą atpažinti pirmojo tipo klaidas kenkėjiškos programinės įrangos identifikavimo modulyje,
          \item pateikti naują būda atrasti kenkėjišką programinę įrangą.
     \end{itemize}
 
 Straipsnyje aprašoma žalingos programinės įrangos plitimo problema. Vienas iš būdų kaip į kompiuterius patenka  tokia programinė įranga yra kenksmingų vykdomųjų failų parsisiuntimas iš interneto svetainių. Kenkimo programų plitimą siekiama apriboti naudojant prevencines priemones. Siekiama identifikuoti svetaines platinančias kenksmingus failus ir neleisti naudotojams jas pasiekti, ar juos kitaip perspėti apie potencialiai kenksmingą svetainę.
 
-Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema. Tai yra sistema, atpažįstanti kenkėjiškas ir joms gretimas svetaines. Pavyzdžiui jei turima struktūra atitinkanti paveiklso \ktufigref{images/kenksmingos_A_B.png} tinklalapius. Šiuo atveju tinklalapiai A ir B nuorodas turi tik į kenksmingą programinę įrangą, dėl to galima laikyti, kad vartotojas negaus jokios naudos iš jų, tik bus skatinamas įsidiegti kenksmingą programinę įrangą. Taip pat, keliaujant interneto grafu nuo apačios, pradedant kenksminga programine įranga galima aptikit ją platinančias svetaines, ir jas taip pat pažymėti kaip kenksmingas.
+Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema kuri atpažįsta kenkėjiškas ir joms gretimas svetaines. Pavyzdžiui jei turima struktūra atitinkanti \ktufigref{images/kenksmingos_A_B.png} tinklalapius. Šiuo atveju tinklalapiai A ir B talpina nuorodas tik į kenksmingą programinę įrangą, dėl to galima laikyti, kad vartotojas negaus jokios naudos iš jų, tik bus skatinamas įsidiegti kenksmingą programinę įrangą. Taip pat, keliaujant interneto grafu nuo apačios, pradedant kenksminga programine įrangą galima aptikit ją platinančias svetaines, jas taip pat pažymėti kaip kenksmingas.
 
 \ktufigure{images/kenksmingos_A_B.png}{10 cm}{Kenksmingos programinės įrangos platinimo svetainės struktūros pavyzdys}
 
@@ -21,7 +21,7 @@ WebCop sistemą sudaro WebCop modulis bei dvi duomenų bazės. Viena duomenų ba
         \item naujos, potencialiai žalingos, programinės įrangos aptikimas.
     \end{enumerate}
 
-Pirmas žingsnis, platinimo svetainių atpažinimas, vykdomas jungiant identifikuotų kenkėjų duomenų bazės duomenis su interneto grafo viršūnėmis. Sekančiame žingsnyje išrenkamos svetainės gretimos platinimo svetainėms. Tai yra vienos nuorodos atstumu nuo kenksmingų svetainių esančios svetainės. Šie interneto tinklalapiai yra laikomi žalingos programinės įrangos katalogais. Naudotojų prieiga prie šių tinklalapių turi būti apribota, siekiant juos apsaugoti. Svetainės esančios dviejų nuorodų atstumu ir talpinančios nežinomas taikomąsias programas identifikuojamos kaip potencialiai kenksmingos, laikoma kad tai nauja, neidentifikuota kenkėjiška programinė įranga.
+Pirmas žingsnis, platinimo svetainių atpažinimas, vykdomas jungiant identifikuotų kenkėjų duomenų bazės duomenis su interneto grafo viršūnėmis. Sekančiame žingsnyje išrenkamos svetainės gretimos platinimo svetainėms. Tai yra vienos nuorodos atstumu nuo kenksmingų svetainių esančios svetainės. Šie interneto tinklalapiai yra laikomi žalingos programinės įrangos katalogais. Naudotojų prieiga prie šių tinklalapių turi būti apribota, siekiant juos apsaugoti. Svetainės esančios dviejų nuorodų atstumu ir talpinančios nežinomas taikomąsias programas identifikuojamos kaip potencialiai kenksmingos. Laikoma, kad tai nauja, neidentifikuota kenkėjiška programinė įranga.
 
 WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrangos registrą bei interneto grafą. Interneto grafo duomenų rinkinys formuotas naudojant interneto paieškos variklio duomenis. Kenkėjišių programų registras kuriamas naudojantis Windows operacinės sistemos naudotojų teikiamais duomenimis.
 
@@ -38,4 +38,4 @@ WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrango
 
 Lentelėje \vref{tab:webcop_rezultatas} pateikiami straipsnyje atliktų matavimų rezultatai.
 
-Šis metodas yra unikalus keliais aspektais -- skenavimas iš viršaus žemyn pakeičiamas skenavimu iš apačios žemyn ir naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu. Tai leidžia pasinaudoti interneto grafo struktūra, ne tik atskirų svetainių bei tinklalapių savybėmis.
+Šis metodas yra unikalus keliais aspektais -- tinklalapių grafas analizuojamas iš apačios aukštyn (angl. \textit{bottom-up}) vietoje skenavimo iš viršaus žemyn (angl. \textit{top-down}) ir naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu. Tai leidžia pasinaudoti interneto grafo struktūra, ne tik atskirų svetainių bei tinklalapių savybėmis.
