--- a/docs/metodas/input.tex
+++ b/docs/metodas/input.tex
@@ -1,10 +1,10 @@
-Kuriama metodika tinklalapių klasifikavimui. Siekiamas galutinis rezultatas yra įrankis, kurio įvestis yra tinklalapio adresas, o rezultatas -- klasifikacija ir jos kokybės vertinimas. Tinklapio adresas (URL) yra pakankamas identifikuoti tinklalapius. Taip pat naudojantis juo galima pasiekti patį tinklapį, taip įrankiui paliekama galimybė pridėti papildomas savybes, tokias kaip tinklalapio turinio peržiūra.
+Darbo galutinis rezultatas yra įrankis, kurio įvestis yra tinklalapio adresas, o rezultatas -- klasifikacija ir jos kokybės vertinimas. Tinklapio adresas (URL) yra pakankamas identifikuoti tinklalapius. Taip pat naudojantis juo galima pasiekti patį tinklapį, taip įrankiui paliekama galimybė pridėti papildomas savybes, tokias kaip tinklalapio turinio peržiūra.
 
-Klasifikavimo modeliai savo bendroje formoje kaip įvestį naudoja parametrų vektorių, dažniausiai tai yra $n$ ilgio vektorius $X = (x_1, x_2, ... , x_n)$ žymintis klasifikuojamo objekto savybes. Savybės išreiškiamos skaitinėmis vertėmis. Klasifikatoriaus tikslas - kiekvienam vektoriui $X$ priskirti klasę $Y$. Dėl to vienas pirmų užduočių kuriuos reikia atlikti yra nagrinėjamo objekto, tinklalapio adreso, transformavimas į savybių vektorių $X$.
+Klasifikavimo modeliai kaip įvestį naudoja parametrų vektorių, dažniausiai tai yra $n$ ilgio vektorius $X = (x_1, x_2, ... , x_n)$ žymintis klasifikuojamo objekto savybes. Savybės išreiškiamos skaitinėmis vertėmis. Klasifikatoriaus tikslas - kiekvienam vektoriui $X$ priskirti klasę $Y$. Dėl to viena pirmų užduočių yra nagrinėjamo objekto, tinklalapio adreso, transformavimas į savybių vektorių $X$.
 
 \ktusection{Savybių vektoriaus $X$ formavimas}
 
-Tinklalapio savybių vektorius $X$ gaunamas iš tinklalapio adreso bei svetainės PageRank įverčių. Tinklalapio adresas yra simbolių eilutė, naiviu atveju būtų galima jį traktuoti kaip skaičių masyvą, tačiau taip būtų prarandama daug informacijos. Visą tinklapio adresą atitinkantis vektorius $X$ yra sudarytas iš savybių:
+Tinklalapio savybių vektorius $X$ gaunamas iš tinklalapio adreso bei svetainės PageRank įverčių. Tinklalapio adresas yra simbolių eilutė. Visą tinklapio adresą atitinkantis vektorius $X$ yra sudarytas iš savybių:
 \begin{enumerate}
 \item srities varde esantys žodžiai;
 \item užklausoje esantys žodžiai;
@@ -35,34 +35,34 @@ Tinklalapio savybių vektorius $X$ gaunamas iš tinklalapio adreso bei svetainė
 ir tarpo simbolis);
 \item kenksmingų svetainių PageRank įvertis;
 \item nekenksmingų svetainių PageRank įvertis.
-\end{enumerate}.
+\end{enumerate}
 Dėl žodžių naudojimo savybių vektoriuje jo ilgis priklauso nuo naudojamo duomenų rinkinio. Kiekvienam žodžiui rinkinyje naudojama po vieną lauką vektoriuje, dėl to jis gali tapti ganėtinai ilgas.
 
 \ktufigure{images/url_struktura.png}{15 cm}{Tinklalapio adreso (URL) struktūra}
 
-Pavyzdinis tinklalapio adresas yra pateikiamas \ktufigref{images/url_struktura.png} paveiksle. Čia matoma ir jo struktūra. Adreso pradžioje yra protokolas, dažniausiai aptinkami \texttt{http://} ar \texttt{https://}. Antras segmentas yra sritis. Kreipiantis į tinklalapį naudojamas sričių vardų serveris, kuris susieja simbolinį adresą, sritį, su skaitiniu adresu, pagal kurį galima kreiptis į svetainę talpinantį serverį. Sritis parenkama taip, kad atspindėtų svetainės turinį, būtų lengvai įsimenama naudotojams, bei būtų lengvai randama paieškos varikliuose. Sričių vardus suteikia sričių registrai, už tam tikrą mokestį. Kaina nustatoma pagal raktažodžių populiarumą. Paskutinis adreso segmentas yra užklausa. Ji leidžia svetainė talpinančiam serveriui pateikti tą dokumentą kuris atitinka tinklalapį kurį bando pasiekti naudotojas.
+Tinklalapio adreso pavyzdys yra pateiktas \ktufigref{images/url_struktura.png}. Čia matoma ir jo struktūra. Adreso pradžioje yra protokolas, dažniausiai aptinkami \texttt{http://} ar \texttt{https://}. Antras segmentas yra sritis. Kreipiantis į tinklalapį naudojamas sričių vardų serveris, kuris susieja simbolinį adresą, sritį, su skaitiniu adresu, pagal kurį galima kreiptis į svetainę talpinantį serverį. Sritis parenkama taip, kad atspindėtų svetainės turinį, būtų lengvai įsimenama naudotojams, bei būtų lengvai randama paieškos varikliuose. Sričių vardus suteikia sričių registrai, už tam tikrą mokestį. Kaina nustatoma pagal raktažodžių populiarumą. Paskutinis adreso segmentas yra užklausa. Ji leidžia svetainė talpinančiam serveriui pateikti tą dokumentą kuris atitinka tinklalapį kurį bando pasiekti naudotojas.
 
-Išskiriamos sąvybės iš tinklalapio adreso yra:
+Išskiriamos savybės iš tinklalapio adreso yra:
 \begin{enumerate}
 \item srities varde esantys žodžiai;
 \item užklausoje esantys žodžiai;
 \item taško simbolių skaičius adrese;
 \item specialiųjų simbolių skaičius adrese.
 \end{enumerate}
-Žodžiai adrese yra išskiriami kaip dviejų reikšmių sąvybės, $0$ jei žodis neegzistuoja adrese, $1$ jei žodis yra adrese. Laikoma, kad žodžius skiria specialieji simboliai.
+Žodžiai adrese yra išskiriami kaip dviejų reikšmių savybės, $0$ jei žodis neegzistuoja adrese, $1$ jei žodis yra adrese. Laikoma, kad žodžius skiria specialieji simboliai.
 
-Pagerank įverčiai gaunami iš orientuoto svetainių grafo $G = (V, E)$, kur $V$ yra šio grafo viršūnės o $E$ lankai. Grafo formavimas iš interneto svetainių yra pavaizduotas \ktufigref{images/hostgraph.png} paveiksle.
+PageRank įverčiai gaunami iš orientuoto svetainių grafo $G = (V, E)$, kur $V$ yra šio grafo viršūnės o $E$ lankai. Grafo formavimas iš interneto svetainių yra pavaizduotas \ktufigref{images/hostgraph.png} .
 \ktufigure{images/hostgraph.png}{15 cm}{Svetainių grafo formavimas}
 
-Grafo viršūnės $V$ yra svetainės, o lankai atitinka ryšius tarp svetainių. Tai yra nuorodos tarp svetainių aptinkamos svetainių tinklalapiuose. Šie lankai turi kryptį. Jei svetainės $v_a$ tinklalapyje yra nuoroda į svetainės $v_b$ tinklalapį laikoma, kad egzistuoja lankas $e_{ab}$ iš viršūnės $v_a$ į viršūnę $v_b$. Visų lankų svoris yra vienodas, tai yra jei keli svetainės $v_a$ tinklalapiai turi nuorodas į svetainės $v_b$ tinklalapius, vis vien laikoma kad yra tik vienas lankas $e_{ab}$. Galimi abipusiai svetainių ryšiai, tai yra jei egzistuoja lankas $e_{ab}$ lankas $e_{ba}$, kuris rodo ryšį iš viršūnės $v_b$ į viršūnę $v_a$ taip pat gali egzistuoti.
+Grafo viršūnės $V$ yra svetainės, o lankai atitinka ryšius tarp svetainių. Tai yra nuorodos tarp svetainių aptinkamos svetainių tinklalapiuose. Šie lankai turi kryptį. Jei svetainės $v_a$ tinklalapyje yra nuoroda į svetainės $v_b$ tinklalapį laikoma, kad egzistuoja lankas $e_{ab}$ iš viršūnės $v_a$ į viršūnę $v_b$. Visų lankų svoris yra vienodas, tai yra jei keli svetainės $v_a$ tinklalapiai turi nuorodas į svetainės $v_b$ tinklalapius, vis vien laikoma, kad yra tik vienas lankas $e_{ab}$. Galimi abipusiai svetainių ryšiai, tai yra jei egzistuoja lankas $e_{ab}$ lankas $e_{ba}$, kuris rodo ryšį iš viršūnės $v_b$ į viršūnę $v_a$ taip pat gali egzistuoti.
 
-Svetainių grafas naudojamas skaičiuoti Pagerank įverčiams. Pagerank įvertis čia apibrėžiamas \cite{pagerank}:
+Svetainių grafas naudojamas skaičiuoti PageRank įverčiams. PageRank įvertis čia apibrėžiamas \cite{pagerank}:
 \begin{equation} \label{eq:pagerank}
     R(v) = (1 - d) + d \sum_{u \in B_{v}} \frac{R(u)}{N_u},
 \end{equation}
 kur $R(v)$ yra viršūnės $v$ PageRank įvertis, $d$ - slopinimo faktorius, $B_v$ viršūnės $u$ kurios turi lankus $e_{uv}$ su viršūne $v$. $N_u$ yra viršūnės $u$ išėjimo laipsnis, tai yra skaičius lankų kurie veda iš viršūnės $u$. Slopinimo faktorius $d$ gali turėti reikšmes tarp $0$ ir $1$.
 
-PageRank įvertis negali būti tiesiogiai apskaičiuojamas pagal \ref{eq:pagerank} formulę. Naudojamas iteracinis metodas \ktualgoref{Pagerank} skaičiavimui:
+PageRank įvertis negali būti tiesiogiai apskaičiuojamas pagal \ref{eq:pagerank} formulę. Naudojamas iteracinis metodas algoritmas  nr.~\vref{algorithm:Pagerank} skaičiavimui:
 
 \begin{ktualgo}{Pagerank}{Iteracinis PageRank įverčio skaičiavimo algoritmas}
 \State{$R_0 \gets S$}
@@ -93,4 +93,4 @@ PageRank įvertis negali būti tiesiogiai apskaičiuojamas pagal \ref{eq:pageran
 
 PageRank įvertis skaičiuojamas du kartus, naudojant skirtingas pradines reikšmes. Skaičiuojant nekenksmingų svetainių įvertį mokymo imties svetainių viršūnėms priskiriama nenulinė reikšmė, o visoms kitoms svetainėms nustatoma nulinė pradinė reikšmė. Skaičiuojant kenksmingų svetainių įvertį nenulinės reikšmės priskiriamos kenksmingų tinklalapių svetainių viršūnėms. Priskiriamos vertės yra vienas iš modelio mokymo metu derinamų hiperparametrų.
 
-Gavus PageRank įverčius, jie yra naudojami suformuoti vektoriui $X$, taip baigiant tinklalapių nuorodų transformavimą į klasifikavimo modeliams pritaikytą vektorių.
+Gavus PageRank įverčius, jie yra naudojami suformuoti vektoriui $X$, taip baigiant tinklalapių nuorodų transformavimą į klasifikavimo modeliams pritaikytą savybių vektorių.
